# ProjectCypherGhostTech

./: .abacus.donotdelete  README.md  setup.py
design/: SDK_DESIGN_DOC.md
research/: self_replication_sdk_report.md
samples/: protocol_comparison.md  tor_nation_state_report.json  tor_nation_state_report.md
sdk/: .abacus.donotdelete  .gitignore  README.md  config.yaml  pyproject.toml
sdk/examples/: demo_enhanced.py  demo_enhanced_output.txt  demo_lifecycle.py
sdk/slsr/: __init__.py  agent_replicator.py  convergence_oracle.py  energy_manager.py  geometry.py  governance.py  learning_loop.py  models.py  protocols.py  stability.py  state_engine.py
sdk/tests/: test_core.py  test_enhancements.py
threat_modeling/: __init__.py  cli.py
threat_modeling/data/: __init__.py  adversaries.py  protocols.py  techniques.py
threat_modeling/engines/: __init__.py  scoring.py
threat_modeling/reports/: generator.py
threat_modeling_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
